log/build_2021-06-01_19-47-18/gazebo_plugin_sim/stderr.log
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform1_plugin.cpp: In member function ‘void gazebo_plugin_sim::Platform1PluginPrivate::OnMsgVelM(interfaces::msg::MotorVels_<std::allocator<void> >::SharedPtr)’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform1_plugin.cpp:208:8: error: request for member ‘sleep’ in ‘time’, which is of non-class type ‘time_t(time_t*) noexcept’ {aka ‘long int(long int*) noexcept’}
  208 |   time.sleep(0.0);
      |        ^~~~~
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform1_plugin.dir/build.make:63: CMakeFiles/platform1_plugin.dir/src/platform1_plugin.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/platform1_plugin.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
